# Numerical-Analysis-Formula-Implementation

./: Cargo.toml  gaussian.rs
src/: bisection.rs  divdiff.rs  factorial.rs  gaussian.java  gaussian.rs  hermite.rs  lagrange.rs  main.rs  neville.rs  newton.rs  question3.rs  regula.rs  richardson.rs  romberg.rs  secant.rs  simpson.rs  spline.rs  trapazoidal.rs
